_777_envoy_gateway/ext-proc-grpc-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-ext-proc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-ext-proc
  template:
    metadata:
      labels:
        app: grpc-ext-proc
    spec:
      containers:
        - name: golang-app-container
          command:
            - sh
            - "-c"
            - "cp -a /app /app-live && cd /app-live && go  run . --certPath=/app-live/certs/ "
          image: golang:1.23.1-alpine
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: grpc-ext-proc
              mountPath: /app
            - name: grpc-ext-proc-secret
              mountPath: /app/certs
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
      volumes:
        - name: grpc-ext-proc
          configMap:
            name: grpc-ext-proc
        - name: grpc-ext-proc-secret
          secret:
            secretName: grpc-ext-proc-secret
            items:
              - key: tls.crt
                path: server.crt
              - key: tls.key
                path: server.key
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-ext-proc
spec:
  selector:
    app: grpc-ext-proc
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
